preparing for maven central release